# chat-ripper

./: .gitignore  CLAUDE.md  README.md  biome.json  config.js  generate-icons.html  generate-icons.js  make-icons.js  manifest.json  package-lock.json  package.json  pyproject.toml  select-reply-agent-prompt.md  vitest.config.js
.claude/: COMMANDS.md
.claude/commands/: generate-architecture.md  generate-case-study.md  generate-charter.md  generate-dev-env.md  generate-e2e-tests.md  generate-prd.md  generate-prompt.md  generate-spec.md  generate-task-spec.md  generate-unit-tests.md  generate-wbs.md  update-architecture.md  update-charter.md  update-prd.md  update-wbs.md
.github/workflows/: ci.yml  pages.yml
app/: config.py  main.py
app/api/: messages.py
app/database/: models.py
app/schemas/: message.py
background/: auth.js  service-worker.js
content/: content.css  content.js
dev/: hot-reload.js
docker/: Dockerfile  README.md  docker-compose.yml  logs.sh  start.sh  stop.sh
docs/: CHEATSHEET.md  CLAUDE.md  GETTING_STARTED.md
docs/core/: add.md  dev_environment_guide.md  prd.md  project_charter.md  wbs.md
docs/examples/: README.md  genai_launchpad_workflow_architecture.md
docs/guides/: AI_ASSISTED_DEVELOPMENT_GUIDE.md  CLAUDE_MD_USAGE.md  COMMON_PITFALLS.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  (+1 more)
playground/: send_message.py
popup/: popup.css  popup.html  popup.js
public/: index.html  privacy-policy.html
scripts/: package.sh  screenshots.mjs
sidepanel/: helpers.js  sidepanel.css  sidepanel.html  sidepanel.js
tests/: CLAUDE.md
(+20 files in other folders)
